# IN204-Projet

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.ppm
include/: GUI.hpp  Material.hpp  Object.hpp  Ray.hpp  RenderUtils.hpp  SavePng.hpp  Scene.hpp  SceneBaseObject.hpp  SceneXMLParser.hpp  Utils.hpp  Vec3.hpp
scene/: balcony.xml  scene_layout.xml
src/: GUI.cpp  Material.hpp  RenderUtils.cpp  SavePng.cpp  Scene.hpp  SceneBaseObject.hpp  SceneXMLParser.cpp  Sphere.hpp  Utils.hpp  Vec3.hpp  main.cpp
